another api link fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="displayTask">
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">HostLink by HostMonkey</a>
+      <a class="navbar-brand" href="/">HostMio by HostMonkey</a>
 
       <ul class="navbar-nav">
         <li class="nav-item">
