--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -22,6 +22,8 @@
     />
 
     <br />
-    <button class="btn btn-success" id="createNewTask">Create Task</button>
+    <button class="btn btn-success" id="createNewTask">
+      Create Short Link
+    </button>
   </form>
 </div>
