--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/add">Add URL</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/#">Why HostMio?</a>
+        </li>
       </ul>
     </nav>
   </div>
