--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,54 @@
 <div id="displayTask">
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/">HostMio by HostMonkey</a>
-
-      <ul class="navbar-nav">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/urls">URLs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/add">Add URL</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#">Why HostMio?</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div> -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">HostMio by HostMonkey</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarText"
+      aria-controls="navbarText"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/urls">URLs</a>
         </li>
@@ -20,8 +65,8 @@
           <a class="nav-link" href="/#">Why HostMio?</a>
         </li>
       </ul>
-    </nav>
-  </div>
+    </div>
+  </nav>
   <div class="container-fluid">
     <router-outlet></router-outlet>
   </div>
