fix navbar for mobile and other small form factors

--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Add a URL</h1>
   <form (ngSubmit)="addTask()">
     <label for="longUrl" class="form-label"
       >Long Url (Make sure it is a full URL)</label
