--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/">HostMio by HostMonkey</a>
       <button
-        class="navbar-toggler"
+        class="navbar-toggler d-lg-none"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
+        (click)="isCollapsed = !isCollapsed"
+        [attr.aria-expanded]="!isCollapsed"
+        aria-controls="navbarsExampleDefault"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
@@ -34,20 +33,25 @@
       </div>
     </nav>
   </div> -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">HostMio by HostMonkey</a>
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"> HostMio by HostMonkey</a>
     <button
-      class="navbar-toggler"
+      class="navbar-toggler d-lg-none"
       type="button"
-      data-toggle="collapse"
-      data-target="#navbarText"
-      aria-controls="navbarText"
-      aria-expanded="false"
+      (click)="isCollapsed = !isCollapsed"
+      [attr.aria-expanded]="!isCollapsed"
+      aria-controls="navbarsExampleDefault"
       aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarText">
+
+    <div
+      class="collapse navbar-collapse"
+      id="navbarsExampleDefault"
+      [ngbCollapse]="isCollapsed"
+    >
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/urls">URLs</a>
@@ -67,6 +71,7 @@
       </ul>
     </div>
   </nav>
+
   <div class="container-fluid">
     <router-outlet></router-outlet>
   </div>
