added scroll to top button, started working on pagination logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
 
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#"
+      <a class="navbar-brand" href="/urls"
         ><img
           src="/assets/images/android-chrome-512x512.png"
           width="30"
@@ -81,8 +81,8 @@
       </div>
     </div>
   </nav>
-
   <div class="container-fluid">
     <router-outlet></router-outlet>
+    <app-scroll-top></app-scroll-top>
   </div>
 </div>
