--- a/src/app/components/display-task/display-task.component.css
+++ b/src/app/components/display-task/display-task.component.css
@@ -10,3 +10,14 @@ table {
   height: 20px;
   overflow: hidden;
 }
+
+.block {
+  display: block;
+  width: 100%;
+  border: none;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  outline: none;
+}
