--- a/src/app/components/scroll-top/scroll-top.component.html
+++ b/src/app/components/scroll-top/scroll-top.component.html
@@ -1,5 +1,5 @@
 <div class="scroll-to-top" [ngClass]="{ 'show-scrollTop': windowScrolled }">
-  <button aria-label="scroll" (click)="scrollToTop()">
+  <button class="scrollButton" aria-label="scroll" (click)="scrollToTop()">
     <i class="fa fa-chevron-up"></i>
   </button>
 </div>
