--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -1,4 +1,12 @@
 <div class="container">
+  <h1 style="color: red" class="center">
+    NOTICE! All links can now be accessed through https://hostm.io/<code
+      >whateverTheLinkIs</code
+    >
+  </h1>
+  <h2 class="center">
+    All old format links with "/s/" will still operate as normal.
+  </h2>
   <h2>URL List</h2>
   <button
     type="button"
@@ -11,10 +19,10 @@
   <div class="card text-center" *ngFor="let url of urls | reverse">
     <h5 class="card-header">
       <a
-        href="https://hostm.io/s/{{ url.shortUrl }}"
+        href="https://hostm.io/{{ url.shortUrl }}"
         target="_blank"
         rel="noopener noreferrer"
-        >https://hostm.io/s/{{ url.shortUrl }}</a
+        >https://hostm.io/{{ url.shortUrl }}</a
       >
     </h5>
     <div class="card-body">
@@ -28,7 +36,7 @@
         type="button"
         class="btn btn-primary button-margin btn-xs"
         ngxClipboard
-        [cbContent]="'https://hostm.io/s/' + url.shortUrl"
+        [cbContent]="'https://hostm.io/' + url.shortUrl"
       >
         Copy Url
       </button>
