--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,5 @@
 <div id="displayTask">
-  <!-- <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">HostMio by HostMonkey</a>
-      <button
-        class="navbar-toggler d-lg-none"
-        type="button"
-        (click)="isCollapsed = !isCollapsed"
-        [attr.aria-expanded]="!isCollapsed"
-        aria-controls="navbarsExampleDefault"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/urls">URLs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/add">Add URL</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/#">Why HostMio?</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div> -->
-
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark myNav">
     <div class="container">
       <a class="navbar-brand" href="/urls"
         ><img
