--- a/src/app/components/task-details/task-details.component.html
+++ b/src/app/components/task-details/task-details.component.html
@@ -1,12 +1,15 @@
 <!-- <div class="container">
-  <h2>Task Details</h2>            
+  <h2>Task Details</h2>
   <table class="table table-hover">
     <thead>
       <tr>
         <th>Task Name</th>
         <th>Time To Complete</th>
         <th>Completed?</th>
-        <th>Delete Task? <div class="text-danger">(WARNING, CANNOT BE UNDONE)</div></th>
+        <th>
+          Delete Task?
+          <div class="text-danger">(WARNING, CANNOT BE UNDONE)</div>
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -14,8 +17,17 @@
         <td>{{ detailTask.taskName }}</td>
         <td>{{ detailTask.taskDue }}</td>
         <td>{{ detailTask.completedTask }}</td>
-        <td><button type="button" class="btn btn-danger btn-xs" (click)="deleteTask(detailTask.id)">Delete</button></td>
+        <td>
+          <button
+            type="button"
+            class="btn btn-danger btn-xs"
+            (click)="deleteTask(url._id)"
+          >
+            Delete
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
 </div> -->
+<p>it works</p>
