added redirect time delay and splash page for redirect

--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -1,1 +1,20 @@
-<p>Redirecting....</p>
+<img
+  src="../../assets/images/avernix-black.png"
+  alt="Avernix Technologies"
+  srcset=""
+  class="center-block"
+/>
+
+<p class="center">
+  Fun Fact! HostMio by HostMonkey is an Avernix Technologies project. Avernix
+  Technologies is a company that specializes in the development of software and
+  hardware solutions.
+</p>
+<p class="center">
+  If you are not redirected in 3 seconds please follow this
+  <a
+    href="https://api.hostmonkey.io/api/v1/links/{{ urlShort }}"
+    rel="noopener noreferrer"
+    >link</a
+  >.
+</p>
