add pricing page and fix redirect timing to feel more fluid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="/add">Add URL</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#">Pricing</a>
+            <a class="nav-link" href="/pricing">Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/#">Features</a>
@@ -49,5 +49,6 @@
   <div class="container-fluid">
     <router-outlet></router-outlet>
     <app-scroll-top></app-scroll-top>
+    <app-footer></app-footer>
   </div>
 </div>
