edit pricing data

--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -61,7 +61,7 @@
           <li><strong>Unlimited</strong> clicks per month</li>
           <li>Priority email support</li>
           <li>Help center access</li>
-          <li>Links do not expire</li>
+          <li>Links expire every 12 months</li>
         </ul>
         <button type="button" class="btn btn-lg btn-block btn-primary">
           Order Now
