--- a/src/app/components/pricing/pricing.component.css
+++ b/src/app/components/pricing/pricing.component.css
@@ -8,17 +8,41 @@ html {
 }
 
 .container {
-  max-width: 960px;
+  width: 100%;
 }
-
+.row {
+  --bs-gutter-x: 0rem;
+}
 .pricing-header {
   max-width: 700px;
 }
+/* @media (min-width: 576px) {
+  .card-deck .card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 0%;
+    flex: 1 0 0%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-right: 15px;
+    margin-bottom: 0;
+    margin-left: 15px;
+  }
+} */
 
-.card-deck .card {
+/* .card-deck .card {
   min-width: 220px;
-}
-
+} */
+/* .card-header {
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+} */
 .border-top {
   border-top: 1px solid #e5e5e5;
 }
@@ -28,4 +52,7 @@ html {
 
 .box-shadow {
   box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+}
+
+.btn {
 }
