--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -7,8 +7,8 @@
 </div>
 
 <div class="container">
-  <div class="card-deck mb-3 text-center">
-    <div class="card mb-4 box-shadow">
+  <div class="card-deck mb-3 text-center row">
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Free</h4>
       </div>
@@ -21,13 +21,15 @@
           <li><strong>Unlimited</strong> clicks per month</li>
           <li>Help center access</li>
           <li>Links expire every month</li>
+          <li>Access to our discord</li>
+          <li></li>
         </ul>
         <button type="button" class="btn btn-lg btn-block btn-outline-primary">
           Sign up for free
         </button>
       </div>
     </div>
-    <div class="card mb-4 box-shadow">
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Pro</h4>
       </div>
@@ -48,7 +50,7 @@
         </button>
       </div>
     </div>
-    <div class="card mb-4 box-shadow">
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Premium</h4>
       </div>
@@ -68,7 +70,7 @@
         </button>
       </div>
     </div>
-    <div class="card mb-4 box-shadow">
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-12 col-lg-3">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Enterprise</h4>
       </div>
@@ -88,7 +90,7 @@
         </button>
       </div>
     </div>
-    <div class="card mb-4 box-shadow">
+    <div class="card mb-4 box-shadow col-12 col-sm-12 col-md-12 col-lg-12">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Custom</h4>
       </div>
@@ -107,4 +109,5 @@
       </div>
     </div>
   </div>
+  <div class="card-deck mb-3 text-center row"></div>
 </div>
