added more grid systems to the url page

--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Add a URL</h1>
-  <form (ngSubmit)="addTask()">
+  <form>
     <label for="longUrl" class="form-label"
       >Long Url (Make sure it is a full URL)</label
     >
@@ -27,7 +27,12 @@
     />
 
     <br />
-    <button type="submit" class="btn btn-success" id="createNewTask">
+    <button
+      type="submit"
+      class="btn btn-success"
+      id="createNewTask"
+      (click)="addTask()"
+    >
       Create Short Link
     </button>
   </form>
