--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -12,40 +12,97 @@
   >
     {{ isReadMore ? "View Full LongURL" : "Hide Full LongURL" }}
   </button>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="card text-center urlCards">
+          <h5 class="card-header">Create a link</h5>
+          <div class="card-body">
+            <form>
+              <label for="longUrl" class="form-label"
+                >Long Url (Make sure it is a full URL)</label
+              >
+              <input
+                type="url"
+                id="longUrl"
+                class="form-control"
+                placeholder="https://example.com"
+                pattern="^(http(s)?:\/\/)+[\w\-\._~:\/?#[\]@!\$&'\(\)\*\+,;=.]+$"
+                oninvalid="this.setCustomValidity('Please match the requested format')"
+                [(ngModel)]="url.longUrl"
+                [ngModelOptions]="{ standalone: true }"
+                required
+              />
+              <br />
+              <label for="shortUrl">Short Url (Leave blank to randomize)</label>
+              <input
+                type="text"
+                id="shortUrl"
+                class="form-control"
+                placeholder="Enter Short URL"
+                [(ngModel)]="url.shortUrl"
+                [ngModelOptions]="{ standalone: true }"
+              />
 
-  <div class="card text-center urlCards" *ngFor="let url of urls | reverse">
-    <h5 class="card-header">
-      <a href="/{{ url.shortUrl }}" target="_blank" rel="noopener noreferrer"
-        >https://hostm.io/{{ url.shortUrl }}</a
-      >
-    </h5>
-    <div class="card-body">
-      <div class="card-title" [ngClass]="{ limitTextHeight: isReadMore }">
-        <a href="{{ url.longUrl }}" target="_blank" rel="noopener noreferrer">{{
-          url.longUrl
-        }}</a>
+              <br />
+              <button
+                type="submit"
+                class="btn btn-success"
+                id="createNewTask"
+                (click)="addTask()"
+              >
+                Create Short Link
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
-      <p class="card-text">Link descriptions coming in v2 of the api</p>
-      <button
-        type="button"
-        class="btn btn-primary button-margin btn-xs"
-        ngxClipboard
-        [cbContent]="'https://hostm.io/' + url.shortUrl"
-      >
-        Copy Url
-      </button>
-      <button
-        type="button"
-        class="btn btn-danger button-margin btn-xs"
-        (click)="deleteTask(url._id)"
-      >
-        Delete
-      </button>
-      <!-- <a href="/edit/{{ url._id }}"
+      <div class="card-deck row col-12 col-sm-12 col-md-6 col-lg-9">
+        <div
+          class="card text-center urlCards col-12 col-sm-12 col-md-12 col-lg-6"
+          *ngFor="let url of urls | reverse"
+        >
+          <h5 class="card-header">
+            <a
+              href="/{{ url.shortUrl }}"
+              target="_blank"
+              rel="noopener noreferrer"
+              >https://hostm.io/{{ url.shortUrl }}</a
+            >
+          </h5>
+          <div class="card-body">
+            <div class="card-title" [ngClass]="{ limitTextHeight: isReadMore }">
+              <a
+                href="{{ url.longUrl }}"
+                target="_blank"
+                rel="noopener noreferrer"
+                >{{ url.longUrl }}</a
+              >
+            </div>
+            <p class="card-text">Link descriptions coming in v2 of the api</p>
+            <button
+              type="button"
+              class="btn btn-primary button-margin btn-xs"
+              ngxClipboard
+              [cbContent]="'https://hostm.io/' + url.shortUrl"
+            >
+              Copy Url
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger button-margin btn-xs"
+              (click)="deleteTask(url._id)"
+            >
+              Delete
+            </button>
+            <!-- <a href="/edit/{{ url._id }}"
         ><button type="button" class="btn btn-danger button-margin btn-xs">
           Edit
         </button></a
       > -->
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
