added more tiers to pricing, changed grid layout a bit

--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -22,6 +22,7 @@
           <li>Help center access</li>
           <li>Links expire every month</li>
           <li>Access to our discord</li>
+          <li>Analytics</li>
           <li></li>
         </ul>
         <button type="button" class="btn btn-lg btn-block btn-outline-primary">
@@ -31,6 +32,48 @@
     </div>
     <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card-header">
+        <h4 class="my-0 font-weight-normal">Free+</h4>
+      </div>
+      <div class="card-body">
+        <h1 class="card-title pricing-card-title">
+          $0 <small class="text-muted">/ mo</small>
+        </h1>
+        <ul class="list-unstyled mt-3 mb-4">
+          <li>Everything from the previous tier</li>
+          <li>50 links created per month</li>
+          <li><strong>Unlimited</strong> clicks per month</li>
+          <li>Links expire after 2 months</li>
+          <li>Simple API Integration</li>
+          <li>Requires advertisement space</li>
+        </ul>
+        <button type="button" class="btn btn-lg btn-block btn-primary">
+          Apply Now
+        </button>
+      </div>
+    </div>
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
+      <div class="card-header">
+        <h4 class="my-0 font-weight-normal">Creator</h4>
+      </div>
+      <div class="card-body">
+        <h1 class="card-title pricing-card-title">
+          $9 <small class="text-muted">/ mo</small>
+        </h1>
+        <ul class="list-unstyled mt-3 mb-4">
+          <li>Everything from the previous tier</li>
+          <li>75 links created per month</li>
+          <li><strong>Unlimited</strong> clicks per month</li>
+          <li>Email support</li>
+          <li>Links expire after 3 months</li>
+          <li>Basic API Integration</li>
+        </ul>
+        <button type="button" class="btn btn-lg btn-block btn-primary">
+          Check Eligibility
+        </button>
+      </div>
+    </div>
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-6 col-lg-3">
+      <div class="card-header">
         <h4 class="my-0 font-weight-normal">Pro</h4>
       </div>
       <div class="card-body">
@@ -38,19 +81,19 @@
           $29 <small class="text-muted">/ mo</small>
         </h1>
         <ul class="list-unstyled mt-3 mb-4">
+          <li>Everything from the previous tier</li>
           <li>100 links created per month</li>
           <li><strong>Unlimited</strong> clicks per month</li>
           <li>Custom domain support</li>
-          <li>Email support</li>
-          <li>Help center access</li>
-          <li>Links expire every 3 months</li>
+          <li>Links expire after 3 months</li>
+          <li>Intermediate API Integration</li>
         </ul>
         <button type="button" class="btn btn-lg btn-block btn-primary">
           Order Now
         </button>
       </div>
     </div>
-    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-6 col-lg-6">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Premium</h4>
       </div>
@@ -59,18 +102,19 @@
           $150 <small class="text-muted">/ mo</small>
         </h1>
         <ul class="list-unstyled mt-3 mb-4">
+          <li>Everything from the previous tier</li>
           <li>1500 links created per month</li>
           <li><strong>Unlimited</strong> clicks per month</li>
           <li>Priority email support</li>
-          <li>Help center access</li>
-          <li>Links expire every 12 months</li>
+          <li>Links expire after 12 months</li>
+          <li>Advanced API Integration</li>
         </ul>
         <button type="button" class="btn btn-lg btn-block btn-primary">
           Order Now
         </button>
       </div>
     </div>
-    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-12 col-lg-3">
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-12 col-lg-6">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Enterprise</h4>
       </div>
@@ -79,11 +123,12 @@
           $599 <small class="text-muted">/ mo</small>
         </h1>
         <ul class="list-unstyled mt-3 mb-4">
+          <li>Everything from the previous tier</li>
           <li>6000 links created per month</li>
           <li><strong>Unlimited</strong> clicks per month</li>
           <li>Phone and email support</li>
-          <li>Help center access</li>
           <li>Links do not expire</li>
+          <li>Full API Integration</li>
         </ul>
         <button type="button" class="btn btn-lg btn-block btn-primary">
           Order now
