added new dropdown menu in nav

--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -4,7 +4,7 @@
   srcset=""
   class="center-block"
 />
-
+<h1 class="center">Redirecting...</h1>
 <p class="center">
   Fun Fact! HostMio by HostMonkey is an Avernix Technologies project. Avernix
   Technologies is a company that specializes in the development of software and
