messed with redirect page

--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -4,14 +4,27 @@
   srcset=""
   class="center-block"
 />
+<!-- <img
+  src="../../assets/images/redirecting-gif.gif"
+  alt="Avernix Technologies"
+  srcset=""
+  class="center-block"
+/> -->
 <h1 class="center">Redirecting...</h1>
+<img
+  src="../../assets/images/aang-redirect.gif"
+  alt="Avernix Technologies"
+  srcset=""
+  class="center-block"
+/>
+<br />
 <p class="center">
   Fun Fact! HostMio by HostMonkey is an Avernix Technologies project. Avernix
   Technologies is a company that specializes in the development of software and
   hardware solutions.
 </p>
 <p class="center">
-  If you are not redirected in 2 seconds please follow this
+  If you are not redirected in 3 seconds please follow this
   <a
     href="https://api.hostmonkey.io/api/v1/links/{{ urlShort }}"
     rel="noopener noreferrer"
