--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,85 +1,5 @@
 <div id="displayTask">
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark myNav">
-    <div class="container">
-      <a class="navbar-brand" href="/urls"
-        ><img
-          src="/assets/images/android-chrome-512x512.png"
-          width="30"
-          height="30"
-          class="d-inline-block align-top"
-          alt=""
-        />HostMio by HostMonkey</a
-      >
-      <button
-        class="navbar-toggler d-lg-none"
-        type="button"
-        (click)="isCollapsed = !isCollapsed"
-        [attr.aria-expanded]="!isCollapsed"
-        aria-controls="navbarsExampleDefault"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div
-        class="collapse navbar-collapse"
-        id="navbarsExampleDefault"
-        [ngbCollapse]="isCollapsed"
-      >
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/urls">URLs</a>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="/add">Add URL</a>
-          </li> -->
-          <li class="nav-item">
-            <a class="nav-link" href="/pricing">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/#">Why HostMio?</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Account
-            </a>
-            <ul
-              class="dropdown-menu dropdown-menu-end"
-              aria-labelledby="navbarDropdown"
-            >
-              <li><a class="dropdown-item" href="#">Profile</a></li>
-              <li><a class="dropdown-item" href="#">Settings</a></li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-              <li><a class="dropdown-item" href="#">Billing</a></li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-              <li><a class="dropdown-item" href="#">Help Center</a></li>
-              <li><a class="dropdown-item" href="#">Resources</a></li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-              <li><a class="dropdown-item" href="#">Login/Signup</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <app-navbar></app-navbar>
   <div class="container-fluid">
     <router-outlet></router-outlet>
     <app-scroll-top></app-scroll-top>
