redirect image sixing fix

--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -11,12 +11,16 @@
   class="center-block"
 /> -->
 <h1 class="center">Redirecting...</h1>
-<img
-  src="../../assets/images/aang-redirect.gif"
-  alt="Avernix Technologies"
-  srcset=""
-  class="center-block"
-/>
+<div class="container">
+  <img
+    src="../../assets/images/aang-redirect.gif"
+    alt="Avernix Technologies"
+    srcset=""
+    width="100%"
+    max-height="auto"
+    class="center-block"
+  />
+</div>
 <br />
 <p class="center">
   Fun Fact! HostMio by HostMonkey is an Avernix Technologies project. Avernix
