--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -19,13 +19,18 @@ body {
   max-width: 680px;
   padding: 0 15px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+.myFooter {
+  top: 50px;
+  position: -webkit-sticky;
+  position: sticky;
+
+  /* bottom: 0; */
+  /* width: 100%; */
+
+  /* line-height: 60px; Vertically center the text there */
+  /* background-color: #f5f5f5; */
+
+  /* left: 0; */
 }
 .pricing-header {
   max-width: 700px;
