changed redirect gif to be more professional..

--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -10,10 +10,10 @@
   srcset=""
   class="center-block"
 /> -->
-<h1 class="center">Redirecting...</h1>
+<!-- <h1 class="center">Redirecting...</h1> -->
 <div class="container">
   <img
-    src="../../assets/images/aang-redirect.gif"
+    src="../../assets/images/redirecting-gif.gif"
     alt="Avernix Technologies"
     srcset=""
     width="100%"
