edit support message and readme

--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -2,7 +2,8 @@
   <ngb-alert type="custom" [dismissible]="false">
     <strong>NOTICE!</strong> All links can now be accessed through
     https://hostm.io/<code>whateverTheLinkIs</code>. All old format links with
-    "/s/" will still operate as normal.
+    "/s/" will still operate as normal until support is removed for this format
+    on Friday, April 1st 2022.
   </ngb-alert>
 
   <div class="col-12 col-sm-12 col-md-12 col-lg-12">
