fix graphical issues and added issues to navbar

--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -55,8 +55,8 @@
   >
     {{ isReadMore ? "View Full LongURL" : "Hide Full LongURL" }}
   </button>
-  <div class="container">
-    <div class="row">
+  <div class="container g-0">
+    <div class="row justify-content-around">
       <div class="card-deck row col-12 col-sm-12 col-md-12 col-lg-12">
         <div
           class="card text-center urlCards col-12 col-sm-12 col-md-12 col-lg-6"
