--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -66,6 +66,44 @@
             >Why HostMio?</a
           >
         </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="issueDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Issues
+          </a>
+          <ul
+            class="dropdown-menu dropdown-menu-end"
+            aria-labelledby="issueDropdown"
+          >
+            <li>
+              <a
+                class="dropdown-item"
+                href="https://github.com/wheeless/HostMioFrontend/issues"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Frontend Issues</a
+              >
+            </li>
+            <li>
+              <hr class="dropdown-divider" />
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="https://github.com/wheeless/HostMio/issues"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Backend Issues</a
+              >
+            </li>
+          </ul>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
