--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -40,7 +40,7 @@
             type="submit"
             class="btn btn-success"
             id="createNewTask"
-            (click)="addTask()"
+            (click)="sendForAdd()"
           >
             Create Short Link
           </button>
@@ -48,6 +48,13 @@
       </div>
     </div>
   </div>
+  <button
+    type="button"
+    class="btn btn-primary button-margin btn-lg block view-long-url"
+    (click)="reloadLinks()"
+  >
+    Refresh Links
+  </button>
   <button
     type="button"
     class="btn btn-info button-margin btn-lg block view-long-url"
