--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -35,3 +35,21 @@
     >link</a
   >.
 </p>
+<div></div>
+<script
+  async
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5134980856971407"
+  crossorigin="anonymous"
+></script>
+<!-- Bottom rocker -->
+<ins
+  class="adsbygoogle"
+  style="display: block"
+  data-ad-client="ca-pub-5134980856971407"
+  data-ad-slot="3575957358"
+  data-ad-format="auto"
+  data-full-width-responsive="true"
+></ins>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
