update ad slot and change URLs to Links in navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
             [routerLink]="['/urls']"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
-            >URLs</a
+            >Links</a
           >
         </li>
         <!-- <li class="nav-item">
