added funny clause to terms

--- a/src/app/components/tos/tos.component.html
+++ b/src/app/components/tos/tos.component.html
@@ -288,4 +288,11 @@
     provided free of charge, we will not be liable for any loss or damage of any
     nature.
   </p>
+  <h3><strong>Soul Bind</strong></h3>
+  <p>
+    By using our website, you hereby bind your soul with Avernix Technologies,
+    HostMio and the Tech field as a whole. The attempt to terminate these
+    binding terms will result in eternal, internal conflict. Failure to present
+    your soul in 5 to 7 business millennia will result in immediate damnation.
+  </p>
 </div>
