edit pricing grid

--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -5,8 +5,10 @@
     suites your needs, please contact us.
   </p>
 </div>
-
 <div class="container">
+  <div class="aligned-left">
+    Are you a student? Click here to see if you are eligible for 3mo free!
+  </div>
   <div class="card-deck mb-3 text-center row">
     <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card-header">
@@ -53,7 +55,7 @@
     </div>
     <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card-header">
-        <h4 class="my-0 font-weight-normal">Creator</h4>
+        <h4 class="my-0 font-weight-normal">Creator/Student</h4>
       </div>
       <div class="card-body">
         <h1 class="card-title pricing-card-title">
@@ -74,6 +76,27 @@
     </div>
     <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-6 col-lg-3">
       <div class="card-header">
+        <h4 class="my-0 font-weight-normal">Basic</h4>
+      </div>
+      <div class="card-body">
+        <h1 class="card-title pricing-card-title">
+          $15 <small class="text-muted">/ mo</small>
+        </h1>
+        <ul class="list-unstyled mt-3 mb-4">
+          <li>Everything from the previous tier</li>
+          <li>100 links created per month</li>
+          <li><strong>Unlimited</strong> clicks per month</li>
+          <li>Help desk ticket support</li>
+          <li>Links expire after 4 months</li>
+          <li>Basic API Integration</li>
+        </ul>
+        <button type="button" class="btn btn-lg btn-block btn-primary">
+          Order Now
+        </button>
+      </div>
+    </div>
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-6 col-lg-4">
+      <div class="card-header">
         <h4 class="my-0 font-weight-normal">Pro</h4>
       </div>
       <div class="card-body">
@@ -82,10 +105,10 @@
         </h1>
         <ul class="list-unstyled mt-3 mb-4">
           <li>Everything from the previous tier</li>
-          <li>100 links created per month</li>
+          <li>150 links created per month</li>
           <li><strong>Unlimited</strong> clicks per month</li>
           <li>Custom domain support</li>
-          <li>Links expire after 3 months</li>
+          <li>Links expire after 6 months</li>
           <li>Intermediate API Integration</li>
         </ul>
         <button type="button" class="btn btn-lg btn-block btn-primary">
@@ -93,7 +116,7 @@
         </button>
       </div>
     </div>
-    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-6 col-lg-6">
+    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-12 col-lg-4">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Premium</h4>
       </div>
@@ -114,7 +137,7 @@
         </button>
       </div>
     </div>
-    <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-12 col-lg-6">
+    <div class="card mb-4 box-shadow col-12 col-sm-12 col-md-12 col-lg-4">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Enterprise</h4>
       </div>
